# signalling-server-cpp

./: .gitignore  CMakeLists.txt  README.md  signalling-server.code-workspace
proto/: auth.proto  instance.proto
src/: main.cpp  server.cpp
src/signalling/: server.cpp  server.h
src/socket/: error.cpp  error.h  server.cpp  server.h  session.cpp  session.h
